src/yini_test/cases/golden/strict/invalid/strings/invalid-classic-escape.strict.yini
@yini strict

^ Strings
message = C"bad unicode escape \u12"

/END
